--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -576,10 +576,12 @@ blockquote {
 
 .features .panel-left {
   padding-left: 0;
+  float: left;
 }
 
 .features .panel-right {
   padding-right: 0;
+  float: right;
 }
 
 .features h2 a {
@@ -974,6 +976,10 @@ svg{
   #features .feature-panel img {
     display: none;
   }
+
+ /* #features .feature-panel-getting-started img {
+    display: none;
+  }*/
 
   #features .feature-panel {
     padding-top: inherit;
@@ -3632,6 +3638,10 @@ li.pingback:first-child {
     padding-left: 160px;
     padding-right: 160px;
     padding-bottom: 60px;
+}
+
+.getting-started-button a{
+  font-size: 18px !important;
 }
       
 
