Features learn more page added

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/css/custom_blog.css">
 
     <link rel="stylesheet" href="/css/widgetcat.css">
+     <script src="https://www.recaptcha.net/recaptcha/api.js" async defer></script>
     <noscript>
         <style>
             .jsonly { display: none !important; }
