--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -92,16 +92,16 @@
             <div class="feature-panel row" style="background: url({{.Params.image}}); ">
         <div class='content col-md-6 col-xs-12 feature-description pull-{{if (eq .Params.thumbnailImagePosition "left")}}right{{else}}left{{ end }}'>
             <h2 class="feature-title">
-            {{ if isset .Params "learnMore" }}
-                <a href="{{ .Params.learnMore }}">{{ .Title }}</a>
+            {{ if .Params.learnMore}}
+                <a href="{{ .Permalink }}">{{ .Title }}</a>
                 {{else}}
                 {{ .Title }}
                 {{ end }}
             </h2>
-            <p class="feature-text">{{ .Content }}</p>
+            <p class="feature-text">{{ .Params.excerpt }}</p>
             <div class="more">
-                {{ if isset .Params "learnMore" }}
-                <a href="{{ .Params.learnMore }}">
+                {{ if .Params.learnMore }}
+                <a href="{{ .Permalink }}">
                     <div class="learn-more feature-block">
                         <div class="feature-block fa fa-arrow-circle-o-right jsonly" > </div>
                         <div class="feature-block feature-link">Learn More</div>
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class='content col-xs-12 feature-image {{if (eq .Params.thumbnailImagePosition "left") }}{{else }}panel-left{{ end }}'>
-            {{ if isset .Params "learnMore" }}<a href="{{ .Params.learnMore }}">{{end}}
+            {{ if isset .Params "learnMore" }}<a href="{{ .Permalink }}">{{end}}
                 <img class='image {{.Params.thumbnailImagePosition}}' src="{{ .Params.thumbnailImage}}">
             {{ if isset .Params "learnMore" }}</a>{{end}}
         </div>
