--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -76,7 +76,7 @@ a:hover {
   box-shadow: none;
 }
 .form-control:focus {
-  border-color: #E19C14;
+  /*border-color: #E19C14;*/
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
@@ -1016,9 +1016,9 @@ p.indent {
     margin-left: 50px;
 }
 
-input#search-box {
-    margin: 60px 0 20px 0;
-}
+/*input#search-box {
+    margin-top: 60px;
+}*/
 
 h2.docs-subtitle {
     min-height: 50px;
@@ -3653,21 +3653,25 @@ li.pingback:first-child {
   border: 0;
 }
 
-/*.example button:hover {
-  background: #0b7dda;
-}*/
+.search-widget{
+  max-width: 100%!important;
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc !important;
+  border-radius: 4px !important;
+  -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s; 
+}
 
-/* Clear floats */
-/*.example::after {
-  content: "";
-  clear: both;
-  display: table;
-}*/
-/*.home-page-blog .excerpt{
-  .padding-bottom: 0;
-}*/
+
 /*
-
 ATTENTION:
 
 Please do not edit this. Your changes will be overwritten when you update Tracks.
