Changed variable names for excerpts in blog.

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -73,8 +73,8 @@
                      </div>
                      <div class='excerpt-content'>
                         <article>
-                           {{ if and (isset .Params "excerpt") .Params.excerpt }}
-                           {{ .Params.excerpt}}
+                           {{ if and (isset .Params "longExcerpt") .Params.longExcerpt }}
+                           {{ .Params.longExcerpt}}
                            {{else}}
                            {{ .Summary }}
                            {{end}}
