--- a/layouts/widget-catalog/list.html
+++ b/layouts/widget-catalog/list.html
@@ -14,11 +14,11 @@
                <ul>
                   {{range $value}}
                   <li class="toctree-l1">
-                     <a href="{{ .doc }}">
-                     <img alt="{{ .text }}" src="http://docs.orange.biolab.si/3/visual-programming/{{ .img }}"/>
+                     <a href="{{ .title | urlize}}">
+                     <img alt="{{ .title }}" src="/{{ .icon }}"/>
                      </a>
-                     <a class="reference internal" href="{{ .doc }}">
-                     {{ .text }}
+                     <a class="reference internal" href="{{ .title | urlize}}">
+                     {{ .title }}
                      </a>
                   </li>
                   {{end}}
@@ -40,11 +40,12 @@
     		var WIDG_JS = {}
 			var widget_idx = 0
 			for (var field_key in WIDGET_JS){
-				var field_val = WIDGET_JS[field_key];
 
+				var field_val = WIDGET_JS[field_key];
+        
 			    for (var widget in field_val){
 			        //  Widget name
-			        var key = field_val[widget].text;
+			        var key = field_val[widget].title;
 			        WIDG_JS[key] = widget_idx
 			        //  Widget keywords
 			        for ( var keyword in field_val[widget].keywords){
@@ -55,7 +56,7 @@
 			    }
 			    }
 			var data_for_trie = WIDG_JS;
-            var options = {
+      var options = {
                 // Minimum search key length
                 min: 1,
                 ignoreCase: true,
