--- a/layouts/shortcodes/link_new.html
+++ b/layouts/shortcodes/link_new.html
@@ -1,3 +1,1 @@
-<a href="{{ .Get `url`}}" target="_blank">
-            {{ .Get `name`}}
-</a>
+<a href="{{ .Get `url`}}" target="_blank">{{ .Get `name`}}</a>
