--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -14,7 +14,7 @@
                     
                     </div>
                     <br />
-                    <a id="main-page-download-button" class="btn btn-warning big-button-base" href="">Download scOrange
+                    <a id="main-page-download-button" class="btn btn-warning big-button-base" href="/download/">Download scOrange
                     </a>
                     </div>
                 </div>
