--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -118,7 +118,7 @@
                     {{ if isset .Params "learnMore" }}
                         &nbsp;&nbsp;&nbsp;&nbsp;
                     {{ end }}
-                <a class="lightbox" href="https://www.youtube.com/watch?v={{ .Params.video }}&autoplay=1">
+                <a class="lightbox" href="https://www.youtube.com/watch?v={{ .Params.video }}&autoplay=1" target="_blank">
                     <div class="feature-block fa fa-play-circle-o jsonly"></div>
                     <div class="feature-block feature-link">Watch Video</div>
                 </a>
