Latest blog posts link in footer changed.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -66,7 +66,7 @@
                 <div class="col-md-5 col-sm-12 col-xs-12 sitemap-group">
                     <div class="latest-blog-posts">
                         <ul class="links list-sitemap" style="padding-bottom: 10px">
-                            <li><b><a class="sitemap-cat" href="http://blog.biolab.si/">Latest blog posts</a></b></li>
+                            <li><b><a class="sitemap-cat" href="/blog/">Latest blog posts</a></b></li>
                             {{ range first 3 (where .Site.RegularPages.ByDate.Reverse "Section" "blog") }}
                             <li>
                             <div class="row">
