Open footer links in a new window and YouTube and GitHub links updated.

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -29,10 +29,10 @@
 
                             <ul class="links list-sitemap">
                                 <li><b><div class="sitemap-cat">Community</div></b></li>
-                                <li><a class="sitemap-sub" href="https://www.facebook.com/orangedm">Facebook</a></li>
-                                <li><a class="sitemap-sub" href="https://www.youtube.com/channel/UClKKWBe2SCAEyv7ZNGhIe4g">YouTube</a></li>
-                                <li><a class="sitemap-sub" href="https://twitter.com/orangedataminer">Twitter</a></li>
-                                <li><a class="sitemap-sub" href="https://datascience.stackexchange.com/questions/tagged/orange">Stack Exchange</a></li>
+                                <li><a class="sitemap-sub" href="https://www.facebook.com/orangedm" target="_blank">Facebook</a></li>
+                                <li><a class="sitemap-sub" href="https://www.youtube.com/channel/UC_kfdmdWIQDRrsMpUMf_pmA" target="_blank">YouTube</a></li>
+                                <li><a class="sitemap-sub" href="https://twitter.com/orangedataminer" target="_blank">Twitter</a></li>
+                                <li><a class="sitemap-sub" href="https://datascience.stackexchange.com/questions/tagged/orange" target="_blank">Stack Exchange</a></li>
                             </ul>
 
                         </div>
@@ -54,8 +54,8 @@
 
                         <div class="col-sm-3 sitemap-group">
                             <ul class="links list-sitemap">
-                                <li><b><div class="sitemap-cat" href="https://github.com/biolab/orange3">Developers</div></b></li>
-                                <li><a class="sitemap-sub" href="https://github.com/biolab/orange3">GitHub</a></li>
+                                <li><b><div class="sitemap-cat">Developers</div></b></li>
+                                <li><a class="sitemap-sub" href="https://github.com/biolab/orange3-single-cell" target="_blank">GitHub</a></li>
                                 <li><a class="sitemap-sub" href="/contribute/">Contribute</a></li>
                             </ul>
                         </div>
