--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -47,7 +47,7 @@
                             <ul class="links list-sitemap">
                                 <li><div class="sitemap-cat">Documentation</div></li>
                                 <li><a class="sitemap-sub" href='/{{"getting-started" | urlize}}/'>Get started</a></li>
-                                <!-- <li><a class="sitemap-sub" href="{% url 'toolbox' %}">Widgets</a></li> -->
+                                <li><a class="sitemap-sub" href="/{{"widget-catalog" | urlize}}/">Widgets</a></li>
                                 <li><a class="sitemap-sub" href="http://docs.orange.biolab.si/3/data-mining-library/">Scripting</a></li>
                             </ul>
                         </div>
