--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,8 +19,8 @@
                         <div class="col-sm-4 sitemap-group">
                             <ul class="links list-sitemap">
                                 <li><div class="sitemap-cat">Download</div></li>
-                                <li><a class="sitemap-sub" href="/download/#windows/">Windows</a></li>
-                                <li><a class="sitemap-sub" href="/download/#macos/">Mac OS</a></li>
+                                <li><a class="sitemap-sub" href="/download/#windows">Windows</a></li>
+                                <li><a class="sitemap-sub" href="/download/#macos">Mac OS</a></li>
                                 <!-- <li><a class="sitemap-sub" href="{% url 'download' %}linux/">Linux</a></li> -->
                             </ul>
                         </div>
