Contribute mail-service added.

--- a/layouts/contribute/list.html
+++ b/layouts/contribute/list.html
@@ -39,7 +39,7 @@
                         <p>Alternatively to sending by postal mail, email, or fax, you may also choose to sign the form electronically:</p>
                         <br>
 
-                        <form role="form" class="form-horizontal contact" action="" method="POST" name="license-form">
+                        <form role="form" class="form-horizontal contact" action="https://singlecell.biolab.si/contribute/" method="POST" name="license-form">
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-10 span4" for="fullname">Full Name:</label>
                                 <div class="inline-label-input col-md-4 col-sm-4 col-xs-10">
