--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -19,7 +19,7 @@
 
                         {{ range .Site.Menus.main }}
                         {{ if (eq .Name "Features") }}
-                            <li class="nav-item"><a id="menu_feature" href="#Orange-Features">{{ .Name }}</a></li>                            
+                            <li class="nav-item"><a id="menu_feature" href="/#Orange-Features">{{ .Name }}</a></li>                            
                         {{else}}
                             <li class="nav-item"><a id="header-screenshots-link"  href="{{ .URL }}">{{ .Name }}</a></li>
                         {{end}}
