--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -106,7 +106,7 @@
             <p class="feature-text">{{ .Params.excerpt }}</p>
             <div class="more">
                 {{ if .Params.learnMore }}
-                <a href="{{ .Permalink }}">
+                <a href="{{ .Permalink }}" class="no-break-buttons">
                     <div class="learn-more feature-block">
                         <div class="feature-block fa fa-arrow-circle-o-right jsonly" > </div>
                         <div class="feature-block feature-link">Learn More</div>
@@ -118,7 +118,7 @@
                     {{ if isset .Params "learnMore" }}
                         &nbsp;&nbsp;&nbsp;&nbsp;
                     {{ end }}
-                <a class="lightbox" href="https://www.youtube.com/watch?v={{ .Params.video }}&autoplay=1" target="_blank">
+                <a class="lightbox no-break-buttons" href="https://www.youtube.com/watch?v={{ .Params.video }}&autoplay=1" target="_blank" >
                     <div class="feature-block fa fa-play-circle-o jsonly"></div>
                     <div class="feature-block feature-link">Watch Video</div>
                 </a>
