Design for mobile devices fix.

--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -1,6 +1,6 @@
 {{ define "main"}}
-<div class="container" style="background-color: white; padding-top: 120px;">
-	<div class="input-group example search-field">
+<div class="container" style="background-color: white; ">
+	<div class="input-group example search-field" style="padding-top: 120px;">
 	  <input type="text" data-search-input id="search-input"placeholder="Search..." name="search">
 	  <span class="input-group-btn">
 	  	<button type="button" onclick="search_content()">
