--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -2,9 +2,9 @@
 <div id="promoo">
 <section id="promo" class="promo section offset-header has-pattern">
         <div class="container cover-image" style="margin-top:20px;">
-            <div class="row">
+            <div class="row ">
                 <div class="overview">
-                    <div class="col-lg-4 col-md-5 col-xs-12">
+                    <div class="col-lg-4 col-md-5 col-xs-12 intro">
                         
                         <h1 class="title firstpagetitle"><span style="white-space:nowrap">{{.Title}}</span> <span style="white-space:nowrap">{{ .Description}}</span></h1>
                     <div class="content">
