--- a/layouts/download/list.html
+++ b/layouts/download/list.html
@@ -1,10 +1,10 @@
 {{ define "main"}}
 <section id="features" class="features section downloads">
-        <div class="container" style="margin-top: 40px">
+        <div class="container-fluid downloados" style="margin-top: 40px">
             <div class="row">
-                <div class="col-lg-10 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-offset-1 col-lg-10 col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10" style="padding: 0px !important;">
                     {{ range .Site.Data.tabs}}
-                    <div class="icon-item col-md-3 col-sm-3 col-xs-12 text-center">
+                    <div class="icon-item col-md-3 col-sm-3 col-xs-6 text-center" >
                         <a onclick="windows({{.os}})" href="#{{.os}}">
                             <div class="icon{{ if eq os .os }}-selected{{end}}">
                                 <i class="fa fa-{{ .icon }} jsonly icon-button"></i>
@@ -17,9 +17,9 @@
             </div><!--//row-->
         </div><!--//container-->
 
-        <div class="container-fluid download-container">
-            <div id="win" class="container download-os ">
-                <div class="faq-col col-md-12 col-sm-12 col-xs-12">
+        <div class="container-fluid">
+            <div id="win" class="container download-os">
+                <div class="col-lg-offset-1 col-lg-10 col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
                     <div class="content">
                         <h2>Download the latest version for Windows</h2>
                         <a id="recommended-download" style="margin-top: 10px" class="btn btn-warning big-button-base" onclick="windows()" href="https://singlecell.biolab.si/install/?os=windows">
@@ -35,7 +35,7 @@
         </div>
 
         <div id="mac" class="container mac download-os">
-                 <div class="faq-col col-md-12 col-sm-12 col-xs-12">
+                 <div class="col-lg-offset-1 col-lg-10 col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
                     <div class="content">
                         <h2>Download the latest version for Mac</h2>
                         <a id="recommended-download" onclick="mac()"style="margin-top: 10px" class="btn btn-warning big-button-base" href="https://singlecell.biolab.si/install/?os=mac">
