--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
         <div class="container">
-            <div class="row">
+            <div class="row footer-pad">
 
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="row">
@@ -83,9 +83,9 @@
 
             </div><!--//row-->
 
-            <div class="row">
+            <div class="row footer-pad">
                 <div class="col-xs-12">
-                    <small class="copyright pull-left">Copyright © University of Ljubljana</small>
+                    <small class="copyright pull-left"  >Copyright © University of Ljubljana</small>
                 </div>
             </div>
         </div>
