--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
  <header id="top" class="header navbar-fixed-top">
-        <div class="container">
-            <h1 class="logo pull-left">
+        <div class="container header-pad" >
+            <h1 class="logo pull-left" >
                 <a id="header-orangelogo" href="/">
                     <img id="logo-image" class="logo-image" src="/images/Single-Cell_Logo.png" alt="Logo">
                 </a>
