--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -89,7 +89,7 @@
 
 <!-- class="promo section offset-header has-pattern" -->
 
-<section id="features" class="features section background-features">
+<section id="features" class="features section background-features padding-features" >
         <a id="Orange-Features" class="features-anchor"></a>
         <div class="container">
             
