--- a/layouts/screenshots/list.html
+++ b/layouts/screenshots/list.html
@@ -2,7 +2,7 @@
 <div class="no-padding-con">
 <div class="container-fluid ">
 <section id="features" class="features section screenshots">
-        <div class="container">
+        <div class="container padding-top-page">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12 title">
                     <h1 class="title">Screenshots</h1>
