--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -780,3 +780,17 @@ blockquote cite {
   text-align: right;
 }
 
+.features{
+    padding-top: 40px;
+}
+.getting-started{
+    padding-top: 50px;
+}
+.padding-top-page {
+    padding-top: 20px;
+}
+
+.padding-features{
+    padding-top: 50px;
+}
+
