Features anchor padding.

--- a/layouts/home/list.html
+++ b/layouts/home/list.html
@@ -90,7 +90,7 @@
 <!-- class="promo section offset-header has-pattern" -->
 
 <section id="features" class="features section background-features padding-features" >
-        <a id="Orange-Features" class="features-anchor"></a>
+        <a id="Orange-Features" class="features-anchor" style="padding-top: 20px;"></a>
         <div class="container">
             
            {{ range .Pages.ByWeight }}
