Widget catalog search-box position.

--- a/layouts/widget-catalog/list.html
+++ b/layouts/widget-catalog/list.html
@@ -1,8 +1,8 @@
 {{ define "main"}}
 <section id="features" class="features section padding-bottom">
-   <div id="widgets"class="container page-background" style="margin-top: 20px;">
+   <div id="widgets" class="container page-background search-widgets">
    	<div class="row">
-      <div class="col-xs-12 col-md-12 content" >
+      <div class="col-xs-12 col-md-12 content" style="padding-bottom: 10px;">
          <input type="text" class="jsonly search-widget" id="search-box" placeholder="Quick Search" tabindex="1" autofocus />
       </div>
      </div>
