--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -780,3 +780,10 @@ blockquote cite {
   text-align: right;
 }
 
+.features{
+    padding-top: 40px;
+}
+
+.search-widgets{
+    padding-top: 80px;
+}
