--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3705,7 +3705,8 @@ li.pingback:first-child {
   border: 1px solid #ccc !important;
   border-radius: 4px !important;
   -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s; 
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  padding-bottom: 10px; 
 }
 
 @media (max-width: 991px) {
