Download links updated.

--- a/layouts/download/list.html
+++ b/layouts/download/list.html
@@ -22,12 +22,12 @@
                 <div class="col-lg-offset-1 col-lg-10 col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
                     <div class="content">
                         <h2>Download the latest version for Windows</h2>
-                        <a id="recommended-download" style="margin-top: 10px" class="btn btn-warning big-button-base" onclick="windows()" href="https://singlecell.biolab.si/install/?os=windows">
+                        <a id="recommended-download" style="margin-top: 10px" class="btn btn-warning big-button-base" onclick="windows()" href="https://service.biolab.si/install/?os=windows">
                             Download scOrange
                         </a>
 
                         <h3><a id="standalone"></a>Standalone installer</h3>
-                        <a href="https://singlecell.biolab.si/install/?os=windows">scOrange-win_amd64.exe (64 bit)</a><br />
+                        <a href="https://service.biolab.si/install/?os=windows">scOrange-win_amd64.exe (64 bit)</a><br />
                         <p>Can be used without administrative priviledges.</p>
 
                     </div>
@@ -38,11 +38,11 @@
                  <div class="col-lg-offset-1 col-lg-10 col-md-offset-1 col-md-10 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
                     <div class="content">
                         <h2>Download the latest version for Mac</h2>
-                        <a id="recommended-download" onclick="mac()"style="margin-top: 10px" class="btn btn-warning big-button-base" href="https://singlecell.biolab.si/install/?os=mac">
+                        <a id="recommended-download" onclick="mac()"style="margin-top: 10px" class="btn btn-warning big-button-base" href="https://service.biolab.si/install/?os=mac">
                             Download scOrange
                         </a>
                         <h3><a id="standalone"></a>Bundle</h3>
-                        <a href="https://singlecell.biolab.si/install/?os=mac">scOrange.dmg</a><br/>
+                        <a href="https://service.biolab.si/install/?os=mac">scOrange.dmg</a><br/>
                         <p>A universal bundle with everything packed in and ready to use.</p>
                     </div>
             </div>
