--- a/layouts/widget-catalog/single.html
+++ b/layouts/widget-catalog/single.html
@@ -4,8 +4,7 @@
         <div class="container page-background">
             <div class="row">
                 <div class="col-md-12 col-sm-12 col-xs-12">
-                    <h1 class="title">{{.Title}}</h1>
-                    <div class="content privacy">
+                    <div class="content privacy padding-doc">
                         {{.Content}}
                     </div>
                 </div>
