--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -4,15 +4,6 @@
     <div class="container page-background" >
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
-                <!-- {% if post > 0 %}
-                    <div class="alert alert-success custom-alert text-center fade in">
-                        <strong>Success!</strong> Keep in mind that it may take us a while to respond to your inquiry.&nbsp;&nbsp;&nbsp;<button type="button" class="close" data-dismiss="alert">&times;</button>
-                    </div>
-                {% elif post < 0 %}
-                    <div class="alert alert-danger custom-alert text-center fade in">
-                        <strong>Error!</strong> Wrong captcha. Please try again.
-                    </div>
-                {% endif %} -->
                 <h1 class="title">Contact</h1>
 
                 <div class="content">
@@ -49,7 +40,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-1 col-md-10 col-sm-offset-3 col-sm-9">
-                            <div class="g-recaptcha" data-sitekey="6LfSKZEUAAAAAPRIK7HDMtbIXwTc4okj4mk38Rha"></div>
+                        <div data-sitekey="6Lc_qZEUAAAAAHgxcVQnQOCXCYwjPUf9tt3tpnyN" class="g-recaptcha"> </div>
                         <span id="captcha" style="margin-left:100px;color:red" />
                         </div>
                     </div>
@@ -65,8 +56,8 @@
     <script type="text/javascript">
        
             $('#send_mail').submit(function(event){
-
                 var v = grecaptcha.getResponse();
+                console.log(v);
                 if(v.length == 0)
                 {
                     event.preventDefault();
