--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -41,7 +41,7 @@
                     <div class="form-group">
                         <div class="col-md-offset-1 col-md-10 col-sm-offset-3 col-sm-9">
                         <div data-sitekey="6Lc_qZEUAAAAAHgxcVQnQOCXCYwjPUf9tt3tpnyN" class="g-recaptcha"> </div>
-                        <span id="captcha" style="margin-left:100px;color:red" />
+                        <span id="captcha" style="color:red" />
                         </div>
                     </div>
                     <div class="form-group">
@@ -57,16 +57,14 @@
        
             $('#send_mail').submit(function(event){
                 var v = grecaptcha.getResponse();
-                console.log(v);
                 if(v.length == 0)
                 {
                     event.preventDefault();
-                    document.getElementById('captcha').innerHTML="You can't leave Captcha Code";
+                    document.getElementById('captcha').innerHTML="Error! Wrong captcha. Please try again.";
                     return false;
                 }
                 else
                 {
-                    document.getElementById('captcha').innerHTML="Captcha completed";
                     return true; 
                 }
             });
