--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -49,6 +49,7 @@
                                 <li><a class="sitemap-sub" href='/{{"getting-started" | urlize}}/'>Get started</a></li>
                                 <li><a class="sitemap-sub" href="/{{"widget-catalog" | urlize}}/">Widgets</a></li>
                                 <li><a class="sitemap-sub" href="http://docs.orange.biolab.si/3/data-mining-library/">Scripting</a></li>
+                                <li><a class="sitemap-sub" href="/workflows/">Workflows</a></li>
                             </ul>
                         </div>
 
