Ads parameter to contact form POST method.

--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -57,6 +57,7 @@
                         <span id="captcha" style="margin-left:100px;color:red" />
                         </div>
                     </div>
+                    <input class="form-control" type="hidden" id="subject" name="Page" value="singlecell">
                     <div class="form-group">
                         <div class="col-md-offset-1 col-md-10 col-sm-offset-3 col-sm-9">
                             <button type="submit" class="btn btn-theme" value="Submit">Submit</button>
