Update service links.

--- a/layouts/download/list.html
+++ b/layouts/download/list.html
@@ -27,7 +27,7 @@
                         </a>
 
                         <h3><a id="standalone"></a>Standalone installer</h3>
-                        <a href="https://ssh.service.biolab.si/download/singlecell/?platform=windows">scOrange-win_amd64.exe (64 bit)</a><br />
+                        <a href="https://service.biolab.si/download/singlecell?platform=win">scOrange-win_amd64.exe (64 bit)</a><br />
                         <p>Can be used without administrative priviledges.</p>
 
                     </div>
@@ -42,7 +42,7 @@
                             Download scOrange
                         </a>
                         <h3><a id="standalone"></a>Bundle</h3>
-                        <a href="https://ssh.service.biolab.si/download/singlecell/?platform=mac">scOrange.dmg</a><br/>
+                        <a href="https://service.biolab.si/download/singlecell?platform=mac">scOrange.dmg</a><br/>
                         <p>A universal bundle with everything packed in and ready to use.</p>
                     </div>
             </div>
